--- a/index.html
+++ b/index.html
@@ -7,19 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Challenger</title>
+    <title>Student Tools</title>
 </head>
 <body>
-    <nav class="topnav" id="myTopnav">
-        <a href="index.html">&#10026 Home</a>
+    <div class="container">
         <a href="calculator/index.html">Calculator</a>
         <a href="">To Do List</a>
         <a href="">Timer</a>
         <a href="">Stopwatch</a>
-        <a href="javascript:void(0);" class="icon" onclick="navbar()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </nav>
-    <script src="script.js"></script>
+    </div>
 </body>
 </html>
