--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <a href="calculator/index.html">Calculator</a>
-        <a href="">To Do List</a>
+        <a href="ToDoList/index.html">To Do List</a>
         <a href="">Timer</a>
         <a href="">Stopwatch</a>
     </div>
