--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="container">
-        <a href="calculator/index.html">Calculator</a>
+        <a href="Calculator/index.html">Calculator</a>
         <a href="ToDoList/index.html">To Do List</a>
+        <a href="Stopwatch/index.html">Stopwatch</a>
         <a href="">Timer</a>
-        <a href="">Stopwatch</a>
     </div>
 </body>
 </html>
