--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="Calculator/index.html">Calculator</a>
+        <a href="calculator/index.html">Calculator</a>
         <a href="ToDoList/index.html">To Do List</a>
         <a href="Stopwatch/index.html">Stopwatch</a>
         <a href="">Timer</a>
