--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -10,7 +10,7 @@
     <div id="myDIV" class="header">
         <h2 style="margin:5px">To Do List</h2>
         <input type="text" id="myInput" placeholder="Title...">
-        <span onclick="newElement()" class="addBtn">Add New List</span>
+        <span onclick="newElement()" class="addBtn"> + Add</span>
     </div>
 
     <ul id="myUL">
